--- a/src/pages/detail/detail.css
+++ b/src/pages/detail/detail.css
@@ -1,17 +1,11 @@
 .detail{
     background-color: rgba(196, 161, 128, 0.219);
-    width: 100%;
-    height: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 
 .product-detail{
-    width: 300px;
     padding: 2rem;
-    
-}
-
-.product-image{
-    margin: auto;
 }
 
 .product-info h1{
