--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -143,3 +143,9 @@
       z-index: 1 !important;
     }
   }
+
+
+  .Toastify__toast--info, .Toastify__toast--success {
+    background: #c09769;
+}
+
