--- a/src/component/other/Panel/item.css
+++ b/src/component/other/Panel/item.css
@@ -9,3 +9,23 @@
 .user-profile{
   padding: 1rem 2rem;
 }
+
+/* .cart-page {
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  padding: 1.2rem 1.2rem 7rem 1.2rem;
+  height: 100%;
+  background-color: #ecdec3;
+} */
+
+.cart-list {
+  margin-top: 2rem;
+  padding: 0rem 1rem;
+  /* background: #ecdec3; */
+  color: #333;
+}
+
+html {
+  background-color: rgba(196, 161, 128, 0.219);
+}
