--- a/src/component/product/product.scss
+++ b/src/component/product/product.scss
@@ -59,7 +59,7 @@
       right: 7px;
       bottom: -10px;
 
-      i {
+      span {
         width: inherit;
         display: inline-block;
         text-align: center;
