--- a/src/component/other/cart/cart.css
+++ b/src/component/other/cart/cart.css
@@ -6,7 +6,13 @@
     background-color: rgba(196, 161, 128, 0.219);
 }
 
-.cart-list {
+.cart h1{
+  font-size: 30px;
+  padding: 20px;
+  margin-left: 100px;    /*暫時*/
+}
+
+/* .cart-list {
     margin-top: 2rem;
     padding: 0rem 1rem;
     background: #fff;
@@ -17,7 +23,7 @@
     display: block;
     padding: 5px 8px;
     cursor: pointer;
-}
+}  */
 
 /* .cart-name {
     width: 400px;
@@ -26,7 +32,7 @@
     white-space: nowrap;
   } */
 
-  .num-input {
+  /* .num-input {
     border: 2px solid rgb(212, 210, 210);
     border-radius: 0;
     width: 100px;
@@ -44,15 +50,9 @@
 
   .sum-price td {
     vertical-align: middle;
-  }
-
-  /* .no-cart {
-    padding: 1.5rem;
-    background: #fff;
-    text-align: center;
-    margin-top: 1.5rem;
   } */
 
+/* 
   .cart-total {
     margin-top: 1.5rem;
     text-align: right;
@@ -82,17 +82,136 @@
 
   .cart-item-exit.cart-item-exit-active {
     opacity: 0.1;
+  }  */
+
+
+.collection {
+    margin: .5rem 0 1rem 0;
   }
 
-  .cart-check{
-    font-size: 18px;
-    background: rgba(214, 188, 130, 0.795);
-    border-radius: 10px;
-    padding: 5px;
-    position: fixed;
-    right: 20px;
-    margin-top: 8px;
-    width: 100px;
-    }
+  .collection .collection-item {
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid #e0e0e0;
+    display: flex;
+
+}
+
+label {
+  font-size: .8rem;
+  color: #9e9e9e;
+}
 
 
+.btn, .btn-large, .btn-small {
+  text-decoration: none;
+  color: #fff;
+  background-color: #c9b184;
+  text-align: center;
+  letter-spacing: .5px;
+  -webkit-transition: background-color .2s ease-out;
+  transition: background-color .2s ease-out;
+  cursor: pointer;
+  border: none;
+  border-radius: 2px;
+  display: inline-block; 
+  height: 36px;
+  line-height: 36px;
+  padding: 0 16px;
+  text-transform: uppercase;
+  vertical-align: middle;
+  -webkit-tap-highlight-color: transparent;
+}
+
+[type="checkbox"]+span:not(.lever):before, [type="checkbox"]:not(.filled-in)+span:not(.lever):after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  z-index: 0;
+  border: 2px solid #c9b184;
+  border-radius: 1px;
+  margin-top: 3px;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+*, *:before, *:after {
+  -webkit-box-sizing: inherit;
+  box-sizing: inherit;
+}
+
+[type="checkbox"]+span:not(.lever) {
+  position: relative;
+  padding-left: 35px;
+  cursor: pointer;
+  display: inline-block;
+  height: 25px;
+  line-height: 25px;
+  font-size: 1rem;
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
+[type="checkbox"]:not(:checked), [type="checkbox"]:checked {
+  position: absolute;
+  opacity: 0;
+  pointer-events: none;
+}
+
+[type="checkbox"]:checked+span:not(.lever):before {
+  top: -8px;
+  left: -5px;
+  width: 12px;
+  height: 22px;
+  border-top: 2px solid transparent;
+  border-left: 2px solid transparent;
+  border-right: 2px solid #c9b184;
+  border-bottom: 2px solid #c9b184;
+  -webkit-transform: rotate(40deg);
+  transform: rotate(40deg);
+  -webkit-backface-visibility: hidden;
+  backface-visibility: hidden;
+  -webkit-transform-origin: 100% 100%;
+  transform-origin: 100% 100%;
+}
+[type="checkbox"]+span:not(.lever):before, [type="checkbox"]:not(.filled-in)+span:not(.lever):after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 18px;
+  height: 18px;
+  z-index: 0;
+  border: 2px solid #c9b184;
+  border-radius: 1px;
+  margin-top: 3px;
+  -webkit-transition: .2s;
+  transition: .2s;
+}
+
+.fa-sort-up{
+  font-size: 30px;
+  padding: 10px;
+}
+.fa-sort-down{
+  position: absolute;
+  top: 60px;
+  font-size: 30px;
+  padding: 10px;
+}
+
+.item-desc{
+  margin-left: 10px;
+  position: relative;
+
+}
+
+.item-desc p{
+  font-size: 18px;
+
+}
