--- a/src/component/other/cart/cart.css
+++ b/src/component/other/cart/cart.css
@@ -84,6 +84,13 @@
     opacity: 0.1;
   }  */
 
+  .container {
+    width: 100%;
+    height: 100%;
+    margin: auto;
+    background-color: rgba(196, 161, 128, 0.219);
+    padding-left: 1rem;
+}
 
 .collection {
     margin: .5rem 0 1rem 0;
@@ -214,4 +221,13 @@ label {
 .item-desc p{
   font-size: 18px;
 
+}
+
+
+.item-img img{
+  width: 150px;
+}
+
+.container-7{
+  padding-bottom: 8rem;
 }
