--- a/src/component/other/cart/cart.css
+++ b/src/component/other/cart/cart.css
@@ -134,7 +134,7 @@ label {
 }
 .fa-sort-down{
   position: absolute;
-  top: 60px;
+  top: 83px;
   font-size: 30px;
   padding: 10px;
 }
@@ -142,6 +142,7 @@ label {
 .item-desc{
   margin-left: 10px;
   position: relative;
+  padding-left: 10px;
 
 }
 
@@ -152,7 +153,7 @@ label {
 
 
 .item-img img{
-  width: 150px;
+  width: 200px;
 }
 
 .container-7{
