--- a/src/component/other/cart/cart.css
+++ b/src/component/other/cart/cart.css
@@ -130,12 +130,12 @@ label {
 
 .fa-sort-up{
   font-size: 30px;
-  padding: 10px;
+  padding: 15px;
 }
 .fa-sort-down{
   position: absolute;
-  top: 83px;
   font-size: 30px;
+  top: 50px;
   padding: 10px;
 }
 
@@ -145,11 +145,16 @@ label {
   padding-left: 10px;
 
 }
+.item-desc .title{
+  height: 10px;
+}
+
 
 .item-desc p{
   font-size: 18px;
 
 }
+
 
 
 .item-img img{
